// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`other props get passed to container 1`] = `
<span
  className="icon"
  title="Add some stuff"
>
  <i
    className="fa icon-plus"
  />
</span>
`;

exports[`render icon 1`] = `
<span
  className="icon"
>
  <i
    className="fa icon-plus"
  />
</span>
`;

exports[`set size 1`] = `
<span
  className="icon is-large"
>
  <i
    className="fa icon-plus"
  />
</span>
`;
